--- a/index.html
+++ b/index.html
@@ -42,7 +42,41 @@ Released   : 20081127
         </div>
 
         <h1><a href="#">Try to include keywords in your titles</a></h1>
-        <h3>Written by The future owner of this template</h3>
+        <h3>Written by The future owner of this template</h3><div class="js-doc-page _149GH7MRh79av4xDgwWRmK _2J3yRhv6dR7bZZRHu4Uh8U page_spreadsheet" data-index="1"><div class="__page-1"><div><table border="0" cellspacing="0">
+	
+	
+	<tbody><tr>
+		<td align="center" colspan="5" height="43" valign="bottom"><font color="#000000" size="6">Computer's Eye</font></td>
+		</tr>
+	<tr>
+		<td align="left" height="20" valign="bottom"><font color="#FF0000">Name</font></td>
+		<td align="left" valign="bottom"><font color="#FF0000">Address</font></td>
+		<td align="left" valign="bottom"><font color="#FF0000">Mobile</font></td>
+		<td align="left" valign="bottom"><font color="#FF0000">Email</font></td>
+		<td align="left" valign="bottom"><font color="#FF0000">Blood Group</font></td>
+	</tr>
+	<tr>
+		<td align="left" height="20" valign="bottom"><font color="#000000">A</font></td>
+		<td align="left" valign="bottom"><font color="#000000">A</font></td>
+		<td align="left" valign="bottom"><font color="#000000">A</font></td>
+		<td align="left" valign="bottom"><font color="#000000">A</font></td>
+		<td align="left" valign="bottom"><font color="#000000">A</font></td>
+	</tr>
+	<tr>
+		<td align="left" height="20" valign="bottom"><font color="#000000">B</font></td>
+		<td align="left" valign="bottom"><font color="#000000">B</font></td>
+		<td align="left" valign="bottom"><font color="#000000">B</font></td>
+		<td align="left" valign="bottom"><font color="#000000">B</font></td>
+		<td align="left" valign="bottom"><font color="#000000">B</font></td>
+	</tr>
+	<tr>
+		<td align="left" height="20" valign="bottom"><font color="#000000">C</font></td>
+		<td align="left" valign="bottom"><font color="#000000">C</font></td>
+		<td align="left" valign="bottom"><font color="#000000">C</font></td>
+		<td align="left" valign="bottom"><font color="#000000">C</font></td>
+		<td align="left" valign="bottom"><font color="#000000">C</font></td>
+	</tr>
+</tbody></table></div></div></div>
         <div class="content">
         	<p>Since the headings are h1 tags, your page will benefit from trying to include your best keywords in them for Search Engine Optimization purposes.   It is also a good idea to try to use these same keywords in your page title, and content itself.</p><br />
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Integer mi. Vivamus sit amet neque vitae sapien bibendum sodales. Curabitur elementum. Duis imperdiet. Donec eleifend porttitor sapien. Praesent leo. Quisque auctor velit sed tellus. Suspendisse potenti. Aenean laoreet imperdiet nunc. Donec commodo suscipit dolor. Aenean nibh. Sed id odio. Aliquam lobortis risus ut felis. Sed vehicula pellentesque quam.</p>
